FIx vertical steps with icons are not centered properly

--- a/components/steps/style/small.less
+++ b/components/steps/style/small.less
@@ -31,8 +31,8 @@
     padding: 0 8px;
   }
   .@{steps-prefix-cls}-item-custom .@{steps-prefix-cls}-item-icon {
-    width: inherit;
-    height: inherit;
+    width: @steps-small-icon-size;
+    height: @steps-small-icon-size;
     line-height: inherit;
     border-radius: 0;
     border: 0;
